--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ layout: main
                 <p class="description">{{ featured.subtitle }}</p>
                 <div class="buttons">
                     <a href="{{ featured.url }}" role="button" class="button">
-                        <img src="/assets/img/icons/read.svg">
+                        <img src="/assets/img/icons/read.svg" alt="read">
                         <span>Read Now</span>
                     </a>
                 </div>
@@ -48,17 +48,17 @@ layout: main
                         {% include new-post-tag.html date=post.date %}
                         <a href="{{ post.url | prepend: site.baseurl }}" {%if isnewpost %}class="new-post"{% endif %}>
                             {% if post.optimized_image %}
-                                <img src="/assets/img/placeholder.png" width="100%" data-url="{{ post.optimized_image }}" class="preload">
+                                <img src="/assets/img/placeholder.png" width="100%" data-url="{{ post.optimized_image }}" class="preload" alt="{{ post.title }}">
                                 <noscript>
                                     <img src="{{ post.optimized_image }}" width="100%">
                                 </noscript>
                             {% elsif post.image %}
-                                <img src="/assets/img/placeholder.png" width="100%" data-url="{{ post.image }}" class="preload">
+                                <img src="/assets/img/placeholder.png" width="100%" data-url="{{ post.image }}" class="preload" alt="{{ post.title }}">
                                 <noscript>
                                     <img src="{{ post.image }}" width="100%">
                                 </noscript>
                             {% else %}
-                                <img src="/assets/img/placeholder.png" width="100%" data-url="/assets/img/off.jpg" class="preload">
+                                <img src="/assets/img/placeholder.png" width="100%" data-url="/assets/img/off.jpg" class="preload" alt="{{ post.title }}">
                                 <noscript>
                                     <img src="/assets/img/off.jpg" width="100%">
                                 </noscript>
